Update control and middlewares ofr views

--- a/pagadurias/templates/aprobacion/aprobacion_financiera.html
+++ b/pagadurias/templates/aprobacion/aprobacion_financiera.html
@@ -195,6 +195,8 @@
   </dialog>
 </div>
 
+<script src="{% static 'js/dialog.js' %}"></script>
+
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const steps = document.querySelectorAll(".form-step");
@@ -258,31 +260,6 @@
     showStep(currentStep);
   });
 
-  document.addEventListener("click", (e) => {
-    const target = e.target;
-  
-    // Verifica que sea un botón que deba abrir el PDF
-    if (target.matches(".btn-ver-pdf")) {
-      const fileUrl = target.dataset.file;
-      const iframe = document.getElementById("document");
-      const dialog = document.getElementById("dialog");
-  
-      if (fileUrl && iframe && dialog) {
-        iframe.src = fileUrl;
-        dialog.showModal();
-      }
-    }
-  
-    // Botón de cerrar
-    if (target.matches("#closeDialogBtn")) {
-      const iframe = document.getElementById("document");
-      const dialog = document.getElementById("dialog");
-  
-      if (iframe && dialog) {
-        dialog.close();
-        iframe.src = ""; // Limpia el iframe
-      }
-    }
-  });
+
 </script>
 {% endblock %}
