--- a/operaciones/templates/operaciones/aprobar_operaciones.html
+++ b/operaciones/templates/operaciones/aprobar_operaciones.html
@@ -31,7 +31,7 @@
                 📄 Documentos
             </button>
             <button type="button" class="section-btn px-4 py-2 text-white rounded-xl transition-all duration-300 ease-in-out" data-step="7">
-                ✅ Aprobación
+                ✅ Crear
             </button>
         </div>
         
@@ -123,7 +123,7 @@
             <div class="form-step hidden h-full flex-col justify-between items-stretch">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="p-4 bg-white rounded shadow"><strong>👤 Nombre:</strong> {{ pagaduria.nombreRepresentante }}</div>
-                    <div class="p-4 bg-white rounded shadow"><strong>🆔 Cédula:</strong> {{ pagaduria.cedulaRepresentante }}</div>
+                    {% include "components/card_document_check.html" with label="Cédula:" value="Ver Cédula" id="bt-cedula" file=pagaduria.pathCedulaRepresentante name=pagaduria.nombre %}
                     <div class="p-4 bg-white rounded shadow"><strong>📧 Correo:</strong> {{ pagaduria.correoRepresentante }}</div>
                     <div class="p-4 bg-white rounded shadow"><strong>📞 Teléfono:</strong> {{ pagaduria.telefono }}</div>
                     <div class="p-4 bg-white rounded shadow"><strong>🆔 Número de Cédula:</strong> {{ pagaduria.numeroCedulaRepresentante }}</div>
@@ -202,14 +202,14 @@
             <!-- Seccion 8: Panel de Aprobación en Operaciones -->
             <div class="form-step hidden h-full flex-col justify-between items-stretch">
                 <div class="bg-white p-6 rounded-lg shadow-lg font-sans">
-                    <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">✅ Aprobar Pagaduría en Operaciones</h2>
+                    <h2 class="text-2xl font-bold text-blue-900 mb-6 text-center">✅ Crear Pagaduría en Operaciones</h2>
                     <div class="text-center mb-6">
-                        <p class="text-lg text-gray-700">¿Estás seguro que quieres aprobar la pagaduría <strong>{{ pagaduria.nombre }}</strong> en operaciones?</p>
+                        <p class="text-lg text-gray-700">¿Estás seguro que quieres crear la pagaduría <strong>{{ pagaduria.nombre }}</strong> en operaciones?</p>
                     </div>
                     <form method="post" class="text-center">
                         {% csrf_token %}
                         <button type="submit" class="px-6 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition">
-                            Sí, aprobar
+                            Confirmar
                         </button>
                         <a href="{% url 'lista_operaciones' %}" class="px-6 py-2 ml-4 bg-gray-400 text-white rounded-lg hover:bg-gray-500 transition">
                             Cancelar
@@ -224,7 +224,20 @@
         {% include "components/loading.html" %}
     </div>
 
+    <dialog id="dialog" class="w-screen h-screen">
+        <button id="closeDialogBtn" class="absolute top-3 right-6 z-50 w-32 bg-white rounded-full p-2 hover:bg-gray-200">
+            ❌
+        </button>
+        <iframe
+            id="document"
+            class="w-full h-full border-none"
+            frameborder="0"
+            allowfullscreen>
+        </iframe>
+    </dialog>
+
     <script src="{% static 'js/loading.js' %}"></script>
+    <script src="{% static 'js/dialog.js' %}"></script>
 
     <script>
         document.addEventListener("DOMContentLoaded", function () {
