--- a/operaciones/templates/operaciones/lista_operaciones.html
+++ b/operaciones/templates/operaciones/lista_operaciones.html
@@ -35,12 +35,14 @@
                             {{ pagaduria.estadoRiesgos }}
                         </span>
                     </td>
-                    <td class="py-3 px-4 text-center">
-                        <a href="{% url 'aprobar_operaciones' pagaduria.nombre pagaduria.tokenControl %}" 
-                           class="inline-block px-4 py-2 text-sm font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-300">
-                            ✔️ Aprobar en Operaciones
-                        </a>
-                    </td>
+                    {% if request.user.area == "Operaciones" %}
+                        <td class="py-3 px-4 text-center">
+                            <a href="{% url 'aprobar_operaciones' pagaduria.nombre pagaduria.tokenControl %}" 
+                                class="inline-block px-4 py-2 text-sm font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-300">
+                                ✔️ Aprobar en Operaciones
+                            </a>
+                        </td>
+                    {% endif %}
                 </tr>
                 {% empty %}
                 <tr>
