--- a/pagadurias/templates/createPagaduria.html
+++ b/pagadurias/templates/createPagaduria.html
@@ -286,7 +286,7 @@
             </div>
             <div class="flex justify-between mt-6">
                 <button type="button" class="prev-btn">⬅️ Anterior</button>
-                <button type="button" class="next-btn">Siguiente ➡️</button>
+                <button type="button" class="next-btn" id="created-btn">Siguiente ➡️</button>
             </div>
         </div>
 
@@ -457,5 +457,13 @@
 
     });
 
+    document.getElementById('multiStepForm').addEventListener('submit', () => {
+        const btn = document.getElementById('created-btn');
+        btn.disabled = true; // Desactiva el botón
+        btn.classList.add('cursor-not-allowed', 'opacity-50'); // Opcional: hace que se vea desactivado
+    
+        // Opcional: cambia el texto mientras se procesa
+        btn.innerText = 'Creando...'; 
+    });
 </script>
 {% endblock %}
