--- a/pagadurias/templates/updatePagaduria.html
+++ b/pagadurias/templates/updatePagaduria.html
@@ -300,7 +300,7 @@
             </table>
             <div class="flex justify-between mt-6">
                 <button type="button" class="prev-btn">⬅️ Anterior</button>
-                <button type="submit" class="submit-btn">✅ Actualizar</button>
+                <button type="submit" class="submit-btn" id="update-btn">✅ Actualizar</button>
             </div>
         </div>
 
@@ -447,6 +447,14 @@
         }, 0);
     };
 
+    document.getElementById('multiStepForm').addEventListener('submit', () => {
+        const btn = document.getElementById('update-btn');
+        btn.disabled = true; // Desactiva el botón
+        btn.classList.add('cursor-not-allowed', 'opacity-50'); // Opcional: hace que se vea desactivado
+    
+        // Opcional: cambia el texto mientras se procesa
+        btn.innerText = 'Actualizando...'; 
+    });
 
 </script>
 {% endblock %}
