--- a/administrador/templates/usuarios/updateUser.html
+++ b/administrador/templates/usuarios/updateUser.html
@@ -1,9 +1,21 @@
 {% load widget_tweaks %}
 {% load static %}
-<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+<div id="modal-asesores" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
     <div class="bg-white p-6 rounded-lg shadow-lg">
+
+        
         <h2 class="text-2xl font-bold text-blue-900 pb-4">📋 Asesores</h2>
+
+        
         <div class="h-[2px] w-full bg-blue-900"></div>
+        <!-- Botón de cerrar -->
+        <button onclick="cerrarModalAsesores()" class="absolute top-2 right-2 text-gray-100 hover:text-red-600">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none"
+                 viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                <path stroke-linecap="round" stroke-linejoin="round"
+                      d="M6 18L18 6M6 6l12 12" />
+            </svg>
+        </button>
         <form method="post" class="flex flex-col gap-4 p-2">
             {% csrf_token %}
             <input type="hidden" name="form-type" value="update-user">
@@ -42,3 +54,13 @@
         </form>
     </div>
 </div>
+<script>
+    function cerrarModalAsesores() {
+        const modal = document.getElementById('modal-asesores');
+        if (modal) {
+            modal.classList.add('hidden');
+        }
+    }
+</script>
+
+
