--- a/administrador/templates/usuarios/usuarios.html
+++ b/administrador/templates/usuarios/usuarios.html
@@ -56,7 +56,10 @@
                             {% csrf_token %}
                             <input type="hidden" name="form-type" value="open-user">
                             <input type="hidden" name="user-id" value="{{ asesor.id }}">
-                            <button type="submit">Actualizar</button>
+                            <button type="submit" 
+                            class="inline-block px-4 py-2 text-sm font-semibold text-white bg-blue-600 rounded-lg hover:bg-blue-700 transition duration-300">
+                            Actualizar
+                        </button>
                         </form>
                     </td>
                 </tr>
